package cn.tunyl.openclosed;

public abstract class AbstractSkin {
    public  abstract  void display();
}
