package cn.tunyl.openclosed;

public class DefaultSpecificSkin extends AbstractSkin{
    @Override
    public void display() {
        System.out.println("DefaultSpecificSkin");
    }
}
