package cn.tunyl.openclosed;

public class LightSpecificSkin extends AbstractSkin{
    @Override
    public void display() {
        System.out.println("LightSpecificSkin");
    }
}
