package cn.tunyl.stuctural.proxy;

public class Client {
    public static void main(String[] args) {
        ProxyStation proxyStation = new ProxyStation();
        proxyStation.sell();
    }
}
